@@ -88,11 +88,18 @@ dt {
 <table border=1 cellpadding=5 cellspacing=0>
 <tr>
 <td colspan=4 align=center><b>server console commands</b></td>
-</tr><tr>
+</tr>
+<tr>
 <td><a href="#clearspreerecords">clearspreerecords</a></td>
 <td><a href="#lua_status">lua_status</a></td>
 <td><a href="#makeshoutcaster">makeshoutcaster</a></td>
 <td><a href="#removeshoutcaster">removeshoutcaster</a></td>
+</tr>
+<tr>
+<td><a href="#etpub_version">etpub_version</a></td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
 </tr>
 </table>
 
@@ -3602,6 +3609,11 @@ dynamite counter, truck and tank health and all mines.</p>
 <dt>removeshoutcaster [slot#|name]<br>removeshoutcast [slot#|name]<br>removesc [slot#|name]
 <dd>
 <p>Removes players shoutcaster status.</p>
+
+<a name="etpub_version"></a>
+<dt>etpub_version
+<dd>
+<p>Shows information about the running etpub server version.</p>
 
 </dl>
 
