@@ -302,6 +302,9 @@ This command will do nothing if timerSet hasn't been called before.</dd>
 <dt>lua_status</dt>
 <dd>Shows information about the scripts currently loaded by the Lua API engine.</dd>
 
+<dt>etpub_version</dt>
+<dd>Shows information about the running client and server version.</dd>
+
 </dl>
 
 <hr>
